cmake_minimum_required (VERSION 2.8)
#metto il flag per il c++ 11
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_subdirectory(staticKeword)
add_subdirectory(staticMemberFunction)
add_subdirectory(staticMemberVariable)
add_subdirectory(virtual_function_0)
add_subdirectory(virtual_function_1)
add_subdirectory(virtual_function_3)
add_subdirectory(virtual_function_6)
add_subdirectory(virtual_function_a)
add_subdirectory(virtual_function_b)
add_subdirectory(virtual_function_7)

